# voxel-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: basic_terrain.frag  basic_terrain.vert  framebuffer.frag  framebuffer.vert  main.frag  main.vert  water.frag  water.vert
include/: Cube.h  Logger.h  Quad.h  Renderer.h  game.h  gameData.h  openGLError.h
src/: Chunk.cpp  Logger.cpp  Renderer.cpp  World.cpp  game.cpp  gameData.cpp  main.cpp  openGLError.cpp
